# GluPredKit

./: .bumpversion.cfg  .gitignore  .gitmodules  LICENSE.txt  MANIFEST.in  Optimize Therapy Settings.ipynb  README.md  combine_eval.py  combine_trajectory_plots.py  config.json  df android aps.csv  example.py  example_between_dates.py  example_constrained_model.py  example_linear_regression.py  example_loop_model.py  example_mock_data.py  example_nightscout.py  example_one_forecast.py  example_plot_interactive.py  example_plot_trajectories.py  example_therapy_settings.py  gb.pkl  install.sh  libLoopAlgorithmToPython.dylib  loop_test.py  multi-meal_example.csv  paper.bib  paper.md  pyproject.toml  read_data.py  repeat_eval.py  repeat_rmse_period.py  repeat_train.py  repeat_trajectory.py  requirements.txt  ridge_basic.pkl  ridge_constrained.pkl  setup.py  syntetic_data.py  (+10 more)
.github/workflows/: release.yml  test_cli.yml  test_cli_helper.yml  test_metrics.yml  test_model_config_manager.yml  test_models.yml  test_nightscout_parser.yml  test_release.yml  test_unit_config_manager.yml  tests.yml
data/: current.csv
example_data/: synthetic_data.csv
examples/: main.py
glupredkit/: api.py  cli.py  config_manager.py  helper_script.py
glupredkit/helpers/: analyze_trajectory.py  cli.py  draw_metric_heatmap.py  generate_report.py  model_config_manager.py  neural_networks.py  scikit_learn.py  tf_keras.py  unit_config_manager.py
glupredkit/metrics/: __init__.py  base_metric.py  clarke_error_grid.py  combined_metrics.py  continous_seg.py  derivative_metric.py  dynamic_time_warping.py  esod.py  f1.py  g_mean.py  glycemia_detection.py  grmse.py  hyperglycemia_detection.py  hypoglycemia_detection.py  j_index.py  mae.py  mare.py  mcc.py  mcc_hyper.py  mcc_hypo.py  me.py  mre.py  nrmse.py  nrmse_period.py  parkes_error_grid.py  parkes_error_grid_exp.py  parkes_exp.py  parkes_linear.py  pcc.py  rmse.py  rmse_period.py  rmse_period_arima.py  rmse_period_arima_v2.py  seg.py  signal_to_noise_ratio.py  (+3 more)
loop_model_scoring/: penalty_math.py  tidepool_parser.py
src/: cli.py  config_manager.py  constants.py  penalty_math.py  penalty_store.py  tidepool_parser.py
tests/: nightscout_expected_output.csv  nightscout_profiles.json  nightscout_treatments.json  test_all.py  test_cli.py  test_cli_helper.py  test_metric.py  test_metrics.py  test_model_config_manager.py  test_models.py  test_nightscout.py  test_nightscout_parser.py  test_pyloopkit.py  test_unit_config_manager.py
(+163 files in other folders)
