[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glupredkit"
version = "1.0.12"
authors = [
  { name="Miriam K. Wolff", email="miriamkwolff@outlook.com" },
]
description = "GluPredKit aims to make blood glucose model training and prediction more accessible."
readme = "README.md"
dynamic = ["requires-python", "license", "scripts", "dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/miriamkw/GluPredKit"
"Bug Tracker" = "https://github.com/miriamkw/GluPredKit/issues"

[tool.pytest.ini_options]
# Specify options for pytest
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = "Test*"
python_functions = "test_*"
